tests/errors/ellipsis_syntax.pyx
# mode: error

. . .
. ..
.. .
(
    .
    ..
)
[
    ..
    .,
    .
    .

    .
]

_ERRORS = u"""
3: 0: Expected an identifier or literal
4: 0: Expected an identifier or literal
"""
